
[package]
name = "double-ratchet"
version = "0.1.0"
authors = ["Dynisious <daniel.bechaz@gmail.com>"]
edition = "2018"

[features]
test-large-data = []

[dependencies]
x25519-dalek = "0.5.2"
hkdf = "0.7.0"
ring = "0.14.6"
digest = "0.8.0"
generic-array = "0.12.0"
maybe = { version = "0.1.0", git = "https://github.com/Dynisious/maybe.git" }
clear_on_drop = "0.2.3"

[dev-dependencies]
sha-1 = "0.8.1"
